vcl/source/window/window2.cxx
@@ -597,12 +597,14 @@ tools::Long Window::GetDrawPixel( OutputDevice const * pDev, tools::Long nPixels
     return nP;
 }
 
-static void lcl_HandleScrollHelper( ScrollBar* pScrl, double nN, bool isMultiplyByLineSize )
+// returns how much was actually scrolled (so that abs(retval) <= abs(nN))
+static double lcl_HandleScrollHelper( ScrollBar* pScrl, double nN, bool isMultiplyByLineSize )
 {
     if ( !pScrl || !nN || !pScrl->IsEnabled() || !pScrl->IsInputEnabled() || pScrl->IsInModalMode() )
-        return;
+        return 0.0;
 
     tools::Long nNewPos = pScrl->GetThumbPos();
+    double scrolled = nN;
 
     if ( nN == double(-LONG_MAX) )
         nNewPos += pScrl->GetPageSize();
@@ -615,13 +617,22 @@ static void lcl_HandleScrollHelper( ScrollBar* pScrl, double nN, bool isMultiply
             nN*=pScrl->GetLineSize();
         }
 
-        const double fVal = nNewPos - nN;
+        // compute how many quantized units to scroll
+        tools::Long magnitude = o3tl::saturating_cast<tools::Long>(abs(nN));
+        tools::Long change = copysign(magnitude, nN);
 
-        nNewPos = o3tl::saturating_cast<tools::Long>(fVal);
+        nNewPos = nNewPos - change;
+
+        scrolled = double(change);
+        // convert back to chunked/continuous
+        if(isMultiplyByLineSize){
+            scrolled /= pScrl->GetLineSize();
+        }
     }
 
     pScrl->DoScroll( nNewPos );
 
+    return scrolled;
 }
 
 bool Window::HandleScrollCommand( const CommandEvent& rCmd,
@@ -667,6 +678,9 @@ bool Window::HandleScrollCommand( const CommandEvent& rCmd,
                     {
                         double nScrollLines = pData->GetScrollLines();
                         double nLines;
+                        double* partialScroll = pData->IsHorz()
+                            ? &mpWindowImpl->mfPartialScrollX
+                            : &mpWindowImpl->mfPartialScrollY;
                         if ( nScrollLines == COMMAND_WHEEL_PAGESCROLL )
                         {
                             if ( pData->GetDelta() < 0 )
@@ -675,13 +689,12 @@ bool Window::HandleScrollCommand( const CommandEvent& rCmd,
                                 nLines = double(LONG_MAX);
                         }
                         else
-                            nLines = pData->GetNotchDelta() * nScrollLines;
+                            nLines = *partialScroll + pData->GetNotchDelta() * nScrollLines;
                         if ( nLines )
                         {
-                            ImplHandleScroll( nullptr,
-                                          0L,
-                                          pData->IsHorz() ? pHScrl : pVScrl,
-                                          nLines );
+                            ScrollBar* pScrl = pData->IsHorz() ? pHScrl : pVScrl;
+                            double scrolled = lcl_HandleScrollHelper( pScrl, nLines, true );
+                            *partialScroll = nLines - scrolled;
                             bRet = true;
                         }
                     }
@@ -804,12 +817,6 @@ bool Window::HandleScrollCommand( const CommandEvent& rCmd,
 
     return bRet;
 }
-
-// Note that when called for CommandEventId::Wheel above, despite its name,
-// pVScrl isn't necessarily the vertical scroll bar. Depending on
-// whether the scroll is horizontal or vertical, it is either the
-// horizontal or vertical scroll bar. nY is correspondingly either
-// the horizontal or vertical scroll amount.
 
 void Window::ImplHandleScroll( ScrollBar* pHScrl, double nX,
                                ScrollBar* pVScrl, double nY )
